--- a/views/plugin_cs_monitor/run_details.html
+++ b/views/plugin_cs_monitor/run_details.html
@@ -84,7 +84,7 @@ $(function() {
     $('#qfilter_submit').on('click', function(e) {
         e.preventDefault();
         var link = '{{=URL(r=request, args=request.args, user_signature=True)}}';
-        web2py_ajax_page('post', link, $('#qfilter').serialize(), '{{=request.cid}}')
+        $.web2py.ajax_page('post', link, $('#qfilter').serialize(), '{{=request.cid}}')
     });
     $('#qclear').on('click', function(e) {
         e.preventDefault();
